# generic-deriving

./: .travis.yml  CHANGELOG.md  README  README.md  cabal.haskell-ci  ehcDeriving.cabal  foo.lhs  generic-deriving-extra.cabal  generic-deriving.cabal
.github/workflows/: haskell-ci.yml
examples/: Examples.hs  Tuples.hs  compareOutputs.bat  reference.out
misc/: Tuples.hs
src/: Base.hs  Data.hs  Enum.hs  Functor.hs  GMapQ.hs  Show.hs  Typeable.hs  Uniplate.hs
src/Generics/: Deriving.hs
src/Generics/Deriving/: Absurd.hs  Annotate.hs  Base.hs  Comonad.hs  ConNames.hs  Copoint.hs  Data.hs  Default.hs  Enum.hs  Eq.hs  Extra.hs  Foldable.hs  Functor.hs  GMapQ.hs  Instances.hs  Monoid.hs  Semigroup.hs  Show.hs  TH.hs  Traversable.hs  Typeable.hs  Uniplate.hs
src/Generics/Deriving/Base/: Internal.hs
src/Generics/Deriving/Extra/: Base.hs  ConNames.hs  Copoint.hs  Default.hs  Enum.hs  Eq.hs  Foldable.hs  Functor.hs  Instances.hs  Monoid.hs  Semigroup.hs  Show.hs  TH.hs  Traversable.hs  Uniplate.hs
src/Generics/Deriving/Extra/Base/: Internal.hs
src/Generics/Deriving/Extra/TH/: Internal.hs
src/Generics/Deriving/Internal/: Functor.hs
src/Generics/Deriving/Monoid/: Internal.hs
src/Generics/Deriving/Semigroup/: Internal.hs
src/Generics/Deriving/TH/: Internal.hs  Post4'9.hs  Post4_9.hs  Post711.hs  Pre4'9.hs  Pre4_9.hs  Pre711.hs
tests/: DefaultSpec.hs  EmptyCaseSpec.hs  ExampleSpec.hs  GADTSpec.hs  Leftism.hs  T68Spec.hs  T80Spec.hs  T82Spec.hs  TypeInTypeSpec.hs
