name:                   ehcDeriving
version:                0.1
synopsis:               Generic programming library for generalized deriving.
description:

  This package provides generic functionality for regular datatypes.
  Regular datatypes are recursive datatypes such as lists, binary trees,
  etc. This library cannot be used with mutually recursive datatypes or
  with nested datatypes. The multirec library [1] can deal with mutually
  recursive datatypes.
  . 
  This library has been described in the paper:
  .
  *  /A Lightweight Approach to Datatype-Generic Rewriting./
     Thomas van Noort, Alexey Rodriguez, Stefan Holdermans, Johan Jeuring, Bastiaan Heeren.
     ACM SIGPLAN Workshop on Generic Programming 2008.
  .
  More information about this library can be found at
  <http://www.cs.uu.nl/wiki/GenericProgramming/Regular>.
  .
  \[1] <http://hackage.haskell.org/package/multirec>

category:               Generics
copyright:              (c) 2010 Universiteit Utrecht
license:                BSD3
license-file:           LICENSE
author:                 Jose Pedro Magalhaes
maintainer:             generics@haskell.org
stability:              experimental
build-type:             Custom
cabal-version:          >= 1.2.1
tested-with:            GHC == 6.10.4
extra-source-files:     examples/Examples.hs

library
  hs-source-dirs:       src
  exposed-modules:      Generics.Deriving
                        Generics.Deriving.Base

                        -- Generics.Deriving.Data
                        Generics.Deriving.Enum
                        Generics.Deriving.Functor
                        -- Generics.Deriving.GMapQ
                        Generics.Deriving.Show
                        Generics.Deriving.Typeable
                        Generics.Deriving.Uniplate
                        
  build-depends:        base <= 4.2.0.0
  extensions:           MultiParamTypeClasses, CPP
  ghc-options:          -Wall
